--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartImage.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartImage.cshtml
@@ -4,3 +4,52 @@
     var imgPath = @Url.Content("~/PartImage/" + Model + ".jpeg");
     <img src="@imgPath" />
 }
+
+
+<script type="text/javascript">
+    function uploadImage(obj, Part_Id) {
+        var fileExtension = ['jpeg', 'jpg', 'png', 'gif', 'bmp'];
+        if ($.inArray($(obj).val().split('.').pop().toLowerCase(), fileExtension) == -1) {
+            alert("Only '.jpeg','.jpg', '.png', '.gif', '.bmp' formats are allowed.");
+            return;
+        }
+        debugger;
+
+        var data = new FormData();
+        var files = $("#FileUploader").get(0).files;
+        if (files.length > 0) {
+            data.append("ImageData", files[0]);
+        }
+        $.ajax({
+            url: "/Part/UploadImage?Part_Id=" + Part_Id,
+            type: "POST",
+            processData: false,
+            contentType: false,
+            data: data,
+            success: function (response) {
+                //code after success
+
+            },
+            error: function (er) {
+                alert(er);
+            }
+
+        });
+    }
+</script>
+
+
+<div class="form-group">
+    <div class="col-md-10">
+        <input type="file" name="ImageData" id="FileUploader" onchange="uploadImage(this, @Model);" />
+    </div>
+</div>  
+<div>
+    <input id ="Part_Id"type="hidden" value=@Model>
+</div>
+@*<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Create" class="btn btn-default" />
+    </div>
+</div>*@
+
