--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartImage.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartImage.cshtml
@@ -44,9 +44,9 @@
         <input type="file" name="ImageData" id="FileUploader" onchange="uploadImage(this, @Model);" />
     </div>
 </div>  
-<div>
+@*<div>
     <input id ="Part_Id"type="hidden" value=@Model>
-</div>
+</div>*@
 @*<div class="form-group">
     <div class="col-md-offset-2 col-md-10">
         <input type="submit" value="Create" class="btn btn-default" />
