update image update code

--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/PartIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/PartIndex.cshtml
@@ -146,7 +146,8 @@
                             cache: false,
                             url: urlPath,
                             data: {
-                                Part_Id: Part_Id
+                                Part_Id: Part_Id,
+                                Image_Id: 2
                             },
                             beforeSend: function () {
                                 Common.showDialog.show('Please wait....', {
