--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Supplier/SupplierIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Supplier/SupplierIndex.cshtml
@@ -7,7 +7,7 @@
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
 <div role="tabpanel" class="tab-pane active" id="Supplier">  
-    <div class="container" style="margin-top:23px">
+    <div class="container panel panel-default" style="margin-top:23px">
         <label style="margin-left:30px;">Supplier</label><br />
         <div id="divDisplaySupplierMessages">
         </div>
